--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- CSS Global Compulsory-->
-    <link rel="stylesheet" href="{{ asset('/assets/plugins/bootstrap/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('/assets/plugins/bootstrap/css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('/assets/css/headers/header1.css') }}">
     <link rel="stylesheet" href="{{ asset('/assets/plugins/bootstrap/css/bootstrap-responsive.min.css') }}">
@@ -58,11 +58,11 @@
                 <li><a href="#" data-original-title="Twitter" class="social_twitter"></a></li>
                 <li><a href="#" data-original-title="Pinterest" class="social_pintrest"></a></li>
             </ul>
-
             <ul class="loginbar inline" style="float:right;width:300px;">
                 <li><a href="mailto:info@atlashostels.com"><i class="icon-envelope-alt"></i> info@atlashostels.com</a></li> 
                 <li><a><i class="icon-phone-sign"></i> 0845 519 9448</a></li>   
             </ul>
+
         </div>                        
     </div><!--/container-->     
 </div><!--/top-->
@@ -76,7 +76,7 @@
         {% block logo %}
         <!-- Logo -->       
         <div class="logo">                                             
-            <a href="/"><img id="logo-header" src="/assets/img/logo2-default.png" alt="Logo"></a>
+            {# <a href="/"><img id="logo-header" src="/assets/img/logo2-default.png" alt="Logo"></a> #}
         </div><!-- /logo -->                  
         {% endblock %}
 
@@ -92,40 +92,22 @@
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav">
                         <li class="active">
-                            <a href="{{ path('atlas_front_end_homepage') }}">Home
-                            <b class="caret"></b>                            
-                            </a>
-                            <b class="caret-out"></b>                        
+                            <a href="{{ path('atlas_front_end_homepage') }}">Home</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_booking') }}">Booking
-                                <b class="caret"></b>                            
-                            </a>
-                            <b class="caret-out"></b>                        
+                            <a href="{{ path('atlas_front_end_booking') }}">Booking</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_location') }}">Location
-                                <b class="caret"></b>                            
-                            </a>
-                            <b class="caret-out"></b>                        
+                            <a href="{{ path('atlas_front_end_location') }}">Location</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_rooms') }}">Rooms
-                                <b class="caret"></b>                            
-                            </a>
-                            <b class="caret-out"></b>                        
+                            <a href="{{ path('atlas_front_end_rooms') }}">Rooms</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_gallery') }}">Gallery
-                                <b class="caret"></b>                            
-                            </a>
-                            <b class="caret-out"></b>                        
+                            <a href="{{ path('atlas_front_end_gallery') }}">Gallery</a>
                         </li>
                         <li>
-                            <a href="{{ path('atlas_front_end_help') }}" >Help
-                                <b class="caret"></b>                            
-                            </a>
-                            <b class="caret-out"></b>                        
+                            <a href="{{ path('atlas_front_end_help') }}" >Help</a>
                         </li>
                     </ul>
                 </div><!-- /nav-collapse -->                                
@@ -143,75 +125,10 @@
 
 {% block content_part %}{% endblock %}
 
-{% block footer %}
-<!--=== Footer ===-->
-<div class="footer">
-    <div class="container">
-        <div class="row-fluid">
-
-            {% block atlas_investment %}
-            <div class="span4">
-
-                <!-- About -->
-                <div class="headline"><h3>About Atlas Hostels PLC</h3></div>	
-                <p>Atlas Hostels Plc was incorporated with experts from the fields of investments, property and finance with established records of achievement.</p>	
-                <p class="margin-bottom-25">To find out more information about investment, please visit the <a href="{{ path('atlas_front_end_investors') }}">investor centre</a></p>	
-
-                <!-- Monthly Newsletter -->
-                <div class="headline"><h3>Monthly Newsletter</h3></div>	
-                <p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>
-                <form class="form-inline">
-                    <div class="input-append">
-                        <input type="text" placeholder="Email Address" class="input-medium">
-                        <button class="btn-u">Subscribe</button>
-                    </div>
-                </form>	
-						
-            </div><!--/span4-->	
-            {% endblock %}
-            
-            <div class="span4">
-
-                <!-- Contact us -->
-                <div class="headline"><h3>Contact Us</h3></div>	
-                <address>
-                    16 Talbot Street<br />
-                    London <br />
-                    Paddington <br />
-                    W2 5LH <br />
-                    Phone: 0845 519 9448 <br />
-                    Fax: ???? ??? ???? <br />
-                    Email: <a href="mailto:info@atlashostels.com" class="">info@atlashostels.com</a>
-                </address>
-
-
-            </div><!--/span4-->
-
-            {% block facebook_like_box %}
-            <div class="span4">
-                <div class="headline"><h3>Facebook</h3></div>
-                <div style="background:#fff;" class="fb-like-box" data-href="http://www.facebook.com/pages/Atlas-Hostels-Plc/168741279912015" data-width="292" data-height="400" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true"></div>
-            </div><!--/span4-->
-            {% endblock %}
-
-        </div><!--/row-fluid-->	
-    </div><!--/container-->	
-</div><!--/footer-->	
-<!--=== End Footer ===-->
-{% endblock %}
 
 {% block copyright %}
 <!--=== Copyright ===-->
 <div class="copyright">
-
-    <div class="container">
-        <div class="row-fluid">
-            <div class="span8">						
-                <p>2013 &copy; Atlas Hostels PLC. <a href="{{ path('atlas_front_end_privacy_policy') }}">Privacy Policy</a> | <a href="{{ path('atlas_front_end_terms') }}">Terms of Service</a> | <a href="{{ path('atlas_front_end_investors') }}" target="_blank">Invester Centre</a></p>
-            </div>
-
-        </div><!--/row-fluid-->
-    </div><!--/container-->	
 </div><!--/copyright-->	
 <!--=== End Copyright ===-->
 {% endblock %}
