--- a/src/Atlas/FrontEndBundle/Resources/views/Page/home.html.twig
+++ b/src/Atlas/FrontEndBundle/Resources/views/Page/home.html.twig
@@ -385,7 +385,7 @@
 {% block content_part %}
 <!--=== Content Part ===-->
 <div class="container">		
-    <div class="row-fluid margin-bottom-30">
+    <div class="row-fluid">
     	<div class="span3">
             <!-- Monthly Newsletter -->
             <div class="headline"><h3>Monthly Newsletter</h3></div>	
@@ -397,7 +397,10 @@
                 </div>
             </form>	
             <div class="headline"><h3>Facebook</h3></div>
-            <div style="background:#fff;" class="fb-like-box" data-href="http://www.facebook.com/pages/Atlas-Hostels-Plc/168741279912015" data-width="292" data-height="400" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true"></div>
+            <div style="background:#fff;width:270px;overflow:hidden;" class="fb-like-box" data-href="http://www.facebook.com/pages/Atlas-Hostels-Plc/168741279912015" data-width="292" data-height="400" data-show-faces="true" data-stream="false" data-show-border="false" data-header="true"></div>
+            <div class="headline"><h3>Location</h3></div>
+            <div id="map" class="sidebar map margin-bottom-40"></div>
+
         </div>
     	<div class="span6">
             <div id="myCarousel" class="carousel slide" style="margin-top:20px">
@@ -478,11 +481,43 @@
             </div>
 
             <div class="headline"><h3>Follow us</h3></div>
-            <a href="#"><img src="https://twitter.com/images/resources/twitter-bird-white-on-blue.png" height="200" width="200"></a>
+
+            <div style="float:left;">
+                <a href="#"><img src="https://twitter.com/images/resources/twitter-bird-white-on-blue.png" height="150" width="150"></a>
+            </div>
+
+            <div style="float:right;">
+                <a href="#"><img src="/assets/img/Free-Wifi.png" height="100" width="100"></a>
+            </div>
 
         </div>
     </div><!--/row-fluid-->	
     <!--//End About Us -->
 </div><!--/container-->		
 <!-- End Content Part -->
+{% endblock %}
+
+{% block footer_js %}
+<!-- JS Global Compulsory -->           
+<script type="text/javascript" src="/assets/js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="/assets/js/modernizr.custom.js"></script>        
+<script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
+<!-- JS Implementing Plugins -->           
+<script type="text/javascript" src="/assets/plugins/flexslider/jquery.flexslider-min.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="/assets/plugins/gmap/gmap.js"></script>
+<script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
+<!-- JS Page Level -->           
+<script type="text/javascript" src="/assets/js/app.js"></script>
+<script type="text/javascript" src="/assets/js/pages/contact.js"></script>
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        App.init();
+        App.initSliders();                
+        Contact.initMap();        
+    });
+</script>
+<!--[if lt IE 9]>
+<script type="text/javascript" src="/assets/js/respond.js"></script>
+<![endif]-->
 {% endblock %}
