--- a/src/Atlas/FrontEndBundle/Resources/views/Page/location.html.twig
+++ b/src/Atlas/FrontEndBundle/Resources/views/Page/location.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <h1 class="pull-left">Location</h1>
         <ul class="pull-right breadcrumb">
-            <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+            <li><a href="/">Home</a> <span class="divider">/</span></li>
             <li class="active">Location</li>
         </ul>
     </div><!--/container-->
@@ -18,39 +18,37 @@
 <div class="container">	
     <div class="row-fluid">
         <div class="span9">
-            <div id="map" class="map map-box map-box-space margin-bottom-40">
-        </div><!---/map-->
-        <p>Atlas Hostel is located next to London Paddington train station; A short walk away from the hostel and you have the majestic Hyde Park, shopping on Oxford Circus, Regents Street and Kensington. </p><br />
-        <form>
-            <label>Name</label>
-            <input type="text" class="span7" />
-            <label>Email <span class="color-red">*</span></label>
-            <input type="text" class="span7" />
-            <label>Message</label>
-            <textarea rows="8" class="span10"></textarea>
-            <p><button type="submit" class="btn-u">Send Message</button></p>
-        </form>
-    </div><!--/span9-->
+            <div id="map" class="map map-box map-box-space margin-bottom-40"></div><!---/map-->
+            <p>Atlas Hostel is located next to London Paddington train station; A short walk away from the hostel and you have the majestic Hyde Park, shopping on Oxford Circus, Regents Street and Kensington. </p><br />
+            <form>
+                <label>Name</label>
+                <input type="text" class="span7" />
+                <label>Email <span class="color-red">*</span></label>
+                <input type="text" class="span7" />
+                <label>Message</label>
+                <textarea rows="8" class="span10"></textarea>
+                <p><button type="submit" class="btn-u">Send Message</button></p>
+            </form>
+        </div><!--/span9-->
+        <div class="span3">
+            <!-- Contacts -->
+            <div class="headline"><h3>Address</h3></div>
 
-    <div class="span3">
-        <!-- Contacts -->
-        <div class="headline"><h3>Address</h3></div>
+            <ul class="unstyled who margin-bottom-20">
+                <li><i class="icon-home"></i>16 Talbot Street, London, Paddington, W25LH</a></li>
+                <li><i class="icon-phone-sign"></i>0845 519 9448</a></li>
+            </ul>
 
-        <ul class="unstyled who margin-bottom-20">
-            <li><i class="icon-home"></i>16 Talbot Street, London, Paddington, W25LH</a></li>
-            <li><i class="icon-phone-sign"></i>0845 519 9448</a></li>
-        </ul>
+            <!-- Business Hours -->
+            <div class="headline"><h3>Contact</h3></div>
+            <ul class="unstyled who">
+                <li><a href="mailto:info@atlashostels.com"><i class="icon-envelope-alt"></i>info@atlashostels.com</a></li>
+                <li><a href="mailto:bookintgs@atlashostels.com"><i class="icon-envelope-alt"></i>bookintgs@atlashostels.com</a></li>
+                <li><a href="mailto:feedback@atlashostels.com"><i class="icon-envelope-alt"></i>feedback@atlashostels.com</a></li>
+            </ul>
 
-        <!-- Business Hours -->
-        <div class="headline"><h3>Contact</h3></div>
-        <ul class="unstyled who">
-            <li><a href="mailto:info@atlashostels.com"><i class="icon-envelope-alt"></i>info@atlashostels.com</a></li>
-            <li><a href="mailto:bookintgs@atlashostels.com"><i class="icon-envelope-alt"></i>bookintgs@atlashostels.com</a></li>
-            <li><a href="mailto:feedback@atlashostels.com"><i class="icon-envelope-alt"></i>feedback@atlashostels.com</a></li>
-        </ul>
-
-    </div><!--/span3-->        
-</div><!--/row-fluid-->        
+        </div><!--/span3-->        
+    </div><!--/row-fluid-->        
 </div><!--/container-->		
 <!--=== End Content Part ===-->
 
