--- a/web/assets/css/themes/blue.css
+++ b/web/assets/css/themes/blue.css
@@ -1,19 +1,19 @@
 a:focus, 
 a:hover, 
 a:active {
-	color: #3498db;
+	color: #AB0765;
 }
 
 .color-green {
-	color: #3498db;
+	color: #AB0765;
 }
 
 a.read-more:hover { 
-	color:#3498db; 
+	color:#AB0765; 
 }
 
 .linked:hover {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Slider
@@ -25,7 +25,7 @@ a.read-more:hover {
 /*Purchase
 ------------------------------------*/
 .purchase a.btn-buy {
-	background:#3498db;
+	background:#AB0765;
 	text-shadow:0 1px 0 #2980b9;
 }
 .purchase a.btn-buy:hover {
@@ -35,45 +35,45 @@ a.read-more:hover {
 /*Buttons
 ------------------------------------*/
 .btn-u {
-	background: #3498db;
+	background: #AB0765;
 }
 
 .btn-u:hover {
-	background: #2980b9;
+	background: #333;
 }
 
 /*Service
 ------------------------------------*/
 .service i {
-	color:#3498db;	
+	color:#AB0765;	
 }
 
 /*Welcome Block*/
 .servive-block .span4 h4 a:hover {
-	color:#3498db;
+	color:#AB0765;
 }
 
 .servive-block .span4:hover h4,
 .servive-block .span4:hover i {
-	color:#3498db;
+	color:#AB0765;
 }
 .servive-block-in .span4 i {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Service Blocks*/
 .service-alternative .service:hover { 
-	background:#3498db;
+	background:#AB0765;
 } 
 
 /*Thumbnail (Recent Work)
 ------------------------------------*/
 .thumbnail-style h3 a:hover {
-	color:#3498db;
+	color:#AB0765;
 }
 
 .thumbnail-style a.btn-more {
-	background:#3498db;
+	background:#AB0765;
 }
 .thumbnail-style a.btn-more:hover {
 	box-shadow:0 0 0 2px #2980b9;
@@ -81,7 +81,7 @@ a.read-more:hover {
 
 /*Carousel (Recent Work)*/
 .recent-work a:hover span {
-	border-bottom:solid 2px #3498db;
+	border-bottom:solid 2px #AB0765;
 }
 
 .bx-wrapper .bx-prev {
@@ -96,22 +96,22 @@ a.read-more:hover {
 /*Heading*/
 .headline h3, 
 .headline h4 {
-	border-bottom:2px solid #3498db;
+	border-bottom:2px solid #AB0765;
 }
 
 /*Blockquote*/
 blockquote:hover {
-	border-left-color:#3498db; 
+	border-left-color:#AB0765; 
 }
 
 .hero {
-	border-left-color: #3498db;
+	border-left-color: #AB0765;
 }
 
 /*Carousel
 ------------------------------------*/
 .carousel-arrow a.carousel-control:hover {
-	color: #3498db;
+	color: #AB0765;
 }
 
 /*Footer
@@ -120,27 +120,27 @@ blockquote:hover {
 .copyright a,
 .footer a:hover,
 .copyright a:hover {
-	color: #3498db;
+	color: #AB0765;
 }
 
 /*Footer Blog*/
 .footer .dl-horizontal a:hover {
-	color:#3498db !important;
+	color:#AB0765 !important;
 }
 
 
 /*Blog Posts
 ------------------------------------*/
 .posts .dl-horizontal:hover { 
-	border-right:solid 2px #3498db;
+	border-right:solid 2px #AB0765;
 }
 .posts .dl-horizontal a:hover { 
-	color:#3498db; 
+	color:#AB0765; 
 }
 .posts .dl-horizontal:hover dt img,
 .posts .dl-horizontal:hover dd a { 
-	color:#3498db;
-	border-color:#3498db !important;
+	color:#AB0765;
+	border-color:#AB0765 !important;
 }
 
 /*Tabs
@@ -150,62 +150,62 @@ blockquote:hover {
 .nav-tabs > .active > a, 
 .nav-tabs > .active > a:hover, 
 .nav-tabs > .active > a:focus { 
-	background:#3498db; 
+	background:#AB0765; 
 }
 
 .nav-tabs > li > a:hover { 
-	background:#3498db; 
+	background:#AB0765; 
 }
 .tab-content { 
-	border-top:solid 2px #3498db; 
+	border-top:solid 2px #AB0765; 
 }
 
 /*Accardion
 ------------------------------------*/
 .acc-home a.active,
 .acc-home a.accordion-toggle:hover { 
-	color:#3498db; 
+	color:#AB0765; 
 }
 .acc-home .collapse.in { 
-	border-bottom:solid 1px #3498db; 
+	border-bottom:solid 1px #AB0765; 
 }
 
 /*Testimonials
 ------------------------------------*/
 .testimonal-arrow a {
-	color:#3498db;
+	color:#AB0765;
 }
 .testimonal-arrow a:hover {
-	background:#3498db !important;
+	background:#AB0765 !important;
 }
 
 /*Breadcrumb
 ------------------------------------*/
 .breadcrumb li.active,
 .breadcrumb li a:hover {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*About Page
 ------------------------------------*/
 .team .thumbnail-style:hover h3 a {
-	color:#3498db !important;
+	color:#AB0765 !important;
 }
 
 /*Social Icons*/
 .team ul li i:hover {
-	background:#3498db;
+	background:#AB0765;
 }	
 
 /*Pricing Page
 ------------------------------------*/
 /*Pricing Head*/
 .pricing:hover h4 {
-	color:#3498db;
+	color:#AB0765;
 }
 
 .pricing-head h3 {
-	background:#3498db;
+	background:#AB0765;
 	text-shadow:0 1px 0 #2980b9;
 	border-bottom:solid 1px #2980b9;
 }
@@ -220,13 +220,13 @@ blockquote:hover {
 	border-bottom:solid 1px #daf0ff;
 }
 .pricing-content li i {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Pricing Footer*/
 .pricing-footer a,
 .pricing-footer button {
-	background:#3498db;
+	background:#AB0765;
 	text-shadow:0 1px 0 #2980b9;
 	border-bottom:solid 2px #2980b9;
 }
@@ -237,12 +237,12 @@ blockquote:hover {
 
 /*Priceing Active*/
 .price-active h4 {
-	color:#3498db;
+	color:#AB0765;
 }
 
 .no-space-pricing .price-active .pricing-head h4,
 .no-space-pricing .pricing:hover .pricing-head h4 {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Right Sidebar
@@ -251,81 +251,81 @@ blockquote:hover {
 .who li i,
 .who li:hover i, 
 .who li:hover a { 
-	color:#3498db; 
+	color:#AB0765; 
 }
 
 /*Privacy Page
 ------------------------------------*/
 .privacy a:hover {
-	color:#3498db; 
+	color:#AB0765; 
 }
 
 /*Portfolio Page
 ------------------------------------*/
 .sort li a:hover { 
-	color: #3498db; 
-	border-bottom: 1px dotted #3498db; 
+	color: #AB0765; 
+	border-bottom: 1px dotted #AB0765; 
 }
 .sort li a.selected { 
-	color: #3498db; 
-	border-bottom: 1px solid #3498db;
+	color: #AB0765; 
+	border-bottom: 1px solid #AB0765;
 }
 
 .view a.info:hover {
-	background: #3498db;
+	background: #AB0765;
 }
 
 /*Blog Page
 ------------------------------------*/
 .blog h3 {
-	color:#3498db;
+	color:#AB0765;
 }
 .blog li a:hover {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Blog Tags*/
 ul.blog-tags a:hover,
 ul.blog-tags a:hover i {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Blog Ads*/
 .blog-ads li img:hover {
-	box-shadow:0 0 0 4px #3498db;
+	box-shadow:0 0 0 4px #AB0765;
 }
 
 /*Blog Latest Tweets*/
 .blog-twitter p a {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Blog Item Page
 ------------------------------------*/
 .blog-item h4.media-heading span a {
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Coming Soon Page
 ------------------------------------*/
 .coming-soon-border {
-	border-top: solid 3px #3498db;
+	border-top: solid 3px #AB0765;
 }
 
 /*Search Page
 ------------------------------------*/
 .booking-blocks p a {
-	color: #3498db;
+	color: #AB0765;
 }
 
 /*Icons Page
 ------------------------------------*/
 .icon-page li:hover { 
-	color:#3498db;
+	color:#AB0765;
 }
 
 /*Glyphicons*/
 .glyphicons-demo a:hover {
-	color: #3498db;
+	color: #AB0765;
 	text-decoration: none;
 }
