--- a/web/assets/css/themes/headers/header1-blue.css
+++ b/web/assets/css/themes/headers/header1-blue.css
@@ -2,49 +2,54 @@
 ------------------------------------*/
 .collapse.in li a:hover,
 .collapse.in li a.dropdown-toggle { 
-	border-bottom:solid 1px #3498db !important;
+	border-bottom:solid 1px #AB0765 !important;
 }
 
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  	color:#3498db;
-	border-bottom:solid 2px #3498db;
+  	color:#fff;    
+        font-weight: bold;        
+	border-bottom:solid 2px #AB0765;        
+	background:#AB0765;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:focus {
-  	color:#3498db;	
-	border-bottom:solid 2px #3498db;
+  	color:#AB0765;
+        font-weight: bold;
+	border-bottom:solid 2px #AB0765;
+        
 }
 
 .navbar .nav > .active > a:hover {	
-  	color:#3498db;	
-	border-bottom:solid 2px #3498db;
+  	color:#fff;    
+	border-bottom:solid 2px #AB0765;
+	background:#AB0765;        
 }
 
 /*Arrow for menu*/
 .navbar .nav > li > a .caret {
-  border-top-color: #3498db!important;	
-  border-bottom-color: #3498db !important;
+  border-top-color: #AB0765!important;	
+  border-bottom-color: #AB0765 !important;
 }
 
 /*Dropdown Menu*/
 .dropdown-menu { 
-	border-top:solid 2px #3498db; 
+	border-top:solid 2px #AB0765; 
 }
 
 .navbar .btn-navbar {
-	background:#3498db;
+	background:#AB0765;
 }
 .navbar .btn-navbar:hover {
 	background:#2980b9;
 }
 .navbar .nav > li > .dropdown-menu:after {
-	border-top-color: #3498db !important;
-	border-bottom-color: #3498db !important;
+	border-top-color: #AB0765 !important;
+	border-bottom-color: #AB0765 !important;
 }
 
 /*Serach*/
 .navbar .nav > li > a.search:hover {
-	color:#3498db;
-	border-bottom-color:#3498db;
+	color:#AB0765;
+	border-bottom-color:#AB0765;
 }
